--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".LvCaApp">
         <activity android:name=".RecyclerSqlListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -16,9 +17,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".DetailSlideActivity">
-
-        </activity>
+        <activity android:name=".DetailCursorSlideActivity"></activity>
     </application>
 
 </manifest>
